@@ -7,7 +7,8 @@
 
   <body>
 
-    <div metal:fill-slot="prefs_configlet_main">
+    <div metal:fill-slot="prefs_configlet_main"
+          tal:define="contents view/contents">
 
       <h1 tal:content="view/label">Configuration</h1>
 
@@ -25,7 +26,7 @@
       </div>
 
       <div id="skel-contents">
-        <span tal:replace="structure view/contents" />
+        <span tal:replace="structure contents" />
       </div>
 
     </div>
